third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking-lang-v2.2/lambda/storable/simplifier_func.exp
module 0x42::mod1 {
    struct S has drop {
        x: u64,
    }
    public fun triple(x: u64): u64 {
        |arg0| __lambda__1__triple(arg0);
        x * 3
    }
    fun __lambda__1__triple(x: u64): u64 {
        S{x: 3};
        x
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: invalid name
  ┌─ simplifier_func.move:9:9
  │
9 │     fun __lambda__1__triple(x: u64): u64 {
  │         ^^^^^^^^^^^^^^^^^^^ Invalid function name '__lambda__1__triple'. Function names cannot start with '_'
